syntax = "proto3";
package influxdata.iox.catalog.v1;
option go_package = "github.com/influxdata/iox/catalog/v1";

import "influxdata/iox/catalog/v1/parquet_file.proto";
import "influxdata/iox/catalog/v1/partition_identifier.proto";
import "influxdata/iox/column_type/v1/type.proto";

service CatalogService {
    // Get the parquet_file catalog records in the given partition
    rpc GetParquetFilesByPartitionId(GetParquetFilesByPartitionIdRequest) returns (GetParquetFilesByPartitionIdResponse);

    // Get the partition catalog records by the table id
    rpc GetPartitionsByTableId(GetPartitionsByTableIdRequest) returns (GetPartitionsByTableIdResponse);

    // Get the partition catalog record by the id
    rpc GetPartitionById(GetPartitionByIdRequest) returns (GetPartitionByIdResponse);

    // Get the column catalog records by the table id
    rpc GetColumnsByTableId(GetColumnsByTableIdRequest) returns (GetColumnsByTableIdResponse);

    // Get the parquet_file catalog records in the given namespace and table name
    rpc GetParquetFilesByNamespaceTable(GetParquetFilesByNamespaceTableRequest) returns (GetParquetFilesByNamespaceTableResponse);

    // Get the parquet_file catalog records in the given namespace
    rpc GetParquetFilesByNamespace(GetParquetFilesByNamespaceRequest) returns (GetParquetFilesByNamespaceResponse);
}

message GetParquetFilesByPartitionIdRequest {
    // Was the catalog-assigned partition ID.
    int64 partition_id = 1;

    reserved 2;
    reserved "partition_identifier";
}

message GetParquetFilesByPartitionIdResponse {
    // the parquet_file records in the partition
    repeated ParquetFile parquet_files = 1;
}

message Partition {
    reserved 5;
    reserved "sort_key";
    reserved 2;
    reserved "sequencer_id";
    reserved 7;
    reserved "shard_id";
    reserved 1;
    reserved "id";
    reserved 6;
    reserved "array_sort_key";
    reserved 10;
    reserved "optional_sort_key";

    // the table id the partition is in
    int64 table_id = 3;
    // the partition key
    string key = 4;

    PartitionIdentifier identifier = 8;

    // the sort key ids sort_key_ids for data in parquet files of this partition which
    // is an array of column ids of the sort keys
    optional SortKeyIds sort_key_ids = 9;
}

message SortKeyIds {
    repeated int64 array_sort_key_ids = 1;
}

message GetPartitionsByTableIdRequest {
    int64 table_id = 1;
}

message GetPartitionsByTableIdResponse {
    repeated Partition partitions = 1;
}

message GetPartitionByIdRequest {
    int64 id = 1;
}

message GetPartitionByIdResponse {
    Partition partition = 1;
}

message Column {
    int64 id = 1;
    int64 table_id = 2;
    string name = 3;
    influxdata.iox.column_type.v1.ColumnType column_type = 4;
}

message GetColumnsByTableIdRequest {
    int64 table_id = 1;
}

message GetColumnsByTableIdResponse {
    repeated Column columns = 1;
}

message GetParquetFilesByNamespaceTableRequest {
    // the namespace name
    string namespace_name = 1;

    // the table name in the namespace
    string table_name = 2;
}

message GetParquetFilesByNamespaceTableResponse {
    // the parquet_file records in the table in the namespace
    repeated ParquetFile parquet_files = 1;
}

message GetParquetFilesByNamespaceRequest {
    // the namespace name
    string namespace_name = 1;
}

message GetParquetFilesByNamespaceResponse {
    // the parquet_file records in the namespace
    repeated ParquetFile parquet_files = 1;
}
